# bfgp-pp

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
.github/workflows/: build.yml  tests.yml
domains/aij23/find/: 1.txt
domains/aij23/generators/: blocks_ontable.py  corridor.py  fibonacci.py  grid.py  gripper.py  michalski_trains.py  miconic.py  reverse.py  satellite.py  select.py  sieve_of_erathostenes.py  sorting.py  spanner.py  visitall.py
domains/aij23/gripper/: 2.txt
domains/aij23/select/: 2.txt  select.py
domains/aij23/solutions/: blocks_ontable.prog  corridor.prog  fibonacci.prog  find.prog  grid.prog  gripper.prog  michalski_trains.prog  miconic.prog  reverse.prog  satellite.prog  sieve_of_erathostenes.prog  sorting.prog  spanner.prog  triangular_sum.prog  visitall.prog
domains/aiplan4eu/action_models/: README.md
domains/gripper/repair/: gripper.prog
domains/gripper/synthesis/: 11.txt  12.txt  13.txt  20.txt  22.txt  23.txt  25.txt  26.txt  28.txt  29.txt  5.txt  7.txt  8.txt  9.txt  p08.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p17.pddl  p19.pddl  p20.pddl  p23.pddl  p24.pddl  p26.pddl
domains/strips/gripper/: 1.txt  2.txt  3.txt
domains/visitall/: visitall.py
domains/visitall/synthesis/: p02.pddl  p03.pddl  p07.pddl  p09.pddl
domains/visitall/validation/: p02.pddl  p03.pddl  p04.pddl  p09.pddl
preprocess/: generate_plan.py  pddl_translator.py
program_repair/program_synthesis/: find_4_ed_mri.prog
program_repair/program_synthesis/fibonacci/: fibonacci_assembler_all_ok.prog  fibonacci_assembler_missing_loops.prog  fibonacci_assembler_missing_planning_actions.prog  fibonacci_cpp_all_ok.prog  fibonacci_cpp_missing_loops.prog  fibonacci_cpp_missing_planning_actions.prog  fibonacci_cpp_wrong_instructions.prog
program_repair/program_synthesis/find/: find_assembler_missing_loops.prog  find_assembler_missing_planning_actions.prog  find_cpp_missing_loops.prog  find_cpp_missing_planning_actions.prog  find_cpp_wrong_instructions.prog
program_repair/program_synthesis/reverse/: reverse_assembler_missing_loops.prog  reverse_assembler_missing_planning_actions.prog  reverse_cpp_missing_loops.prog  reverse_cpp_missing_planning_actions.prog  reverse_cpp_wrong_instructions.prog
program_repair/program_synthesis/select/: select_assembler_all_ok.prog  select_assembler_missing_loops.prog  select_assembler_missing_planning_actions.prog  select_cpp_all_ok.prog  select_cpp_missing_loops.prog  select_cpp_missing_planning_actions.prog  select_cpp_wrong_instructions.prog
program_repair/strips/: gripper_8_ed_mri.prog  visitall_13_ed_mri.prog
repair_progs/: visitall.prog
repair_progs/blocks_ontable/: blocks_all_ok.prog
repair_progs/spanner/: spanner_missing_fors.prog  spanner_missing_planning_actions.prog
scripts/: aij23_synthesis.json  aij23_validation.json  aiplan4eu.json  compile.sh  experiments_aij23.py  experiments_aiplan4eu.py  gen_aij23_benchmarks.sh  gen_aij23_synthesis_benchmarks.sh  gen_aij23_validation_benchmarks.sh  memory_check.sh  pp_vs_bfgp.sh  synthesis_aij23.json  synthesis_aij23.py  synthesis_aiplan4eu.json  time_memory.sh  validation_aij23.json
scripts/ecai23/: generator_testing_adl.sh  generator_testing_cellular.sh  generator_testing_ram.sh  generator_testing_strips.sh  generator_training_adl.sh  generator_training_cellular.sh  generator_training_ram.sh  generator_training_strips.sh  run_all.sh  synthesis.sh  synthesis_adl.sh  synthesis_cellular.sh  synthesis_ram.sh  synthesis_strips.sh  validate.sh  validate_adl.sh  validate_cellular.sh  validate_ram.sh  validate_strips.sh
solutions/program_synthesis/: find_4_ed_ilc.prog  reverse_7_ed_ilc.prog  reverse_7_ed_mri.prog  sorting_assembler.prog
solutions/strips/: gripper_8_ed_ilc.prog  gripper_assembler.prog  gripper_cpp.prog  spanner_12_ed_ilc.prog  spanner_cpp.prog  visitall_13_ed_ilc.prog
src/: action.h  domain.h  factory_methods.h  function.h  generalized_domain.h  generalized_planning_problem.h  grounder.h  instance.h  main.cpp  object.h  object_types.h  program.h  program_state.h  program_translator.h  runner.h  state.h  stats_info.h
src/evaluation_functions/: a_star.h  accumulated_cost.h  closed_world_euclidean_distance.h  closest_hamming_distance.h  distance_to_last_line.h  euclidean_distance.h  evaluation_function.h  h_add.h  h_max.h  hamming_distance.h  inverse_loop_counter.h  jaccard_distance.h  landmark_count.h  loop_counter.h  loop_lines_counter.h  max_ifs.h  max_loop_lines.h  max_nested_loops.h  min_repeated_instructions.h  num_empty_instructions.h  wa_star.h
src/expressions/: expression.h
src/instructions/: end.h  end_for.h  for.h  if.h  instruction.h  planning_action.h
src/instructions/bitvec/: add.h  (+9 more)
src/landmarks/: landmark.h  landmark_graph.h
src/parser/: parser.h
src/relaxations/: relaxed_action.h  relaxed_planning_graph.h  relaxed_state.h
src/search/: best_first_search.h  engine.h  node.h
src/theories/: action_adl.h  action_cellular.h  action_ram.h  action_schemas.h  assembler.h  bitvec.h  c_plus_plus.h  theory.h
src/utils/: argument_parser.h  bfgp_utils.h  common.h
src/variables/: carry_flag.h  constant_value.h  flag.h  pointer.h  state_variable.h  variable.h  zero_flag.h
tests/: CMakeLists.txt  install_tests.sh  run_tests.sh
tests/src/: CMakeLists.txt  actions.cpp  constant_value.cpp  domain.cpp  evaluation_functions.cpp  factories.cpp  flags.cpp  function.cpp  generalized_domain.cpp  generalized_planning_problem.cpp  grounder.cpp  instance.cpp  object.cpp  object_types.cpp  pointer.cpp  program.cpp  program_state.cpp  state.cpp  state_variable.cpp  variable.cpp
tests/src/expressions/: conditions.cpp  effects.cpp
tests/src/instructions/: instructions.cpp  ram_instructions.cpp
tests/src/parser/: parser.cpp
tests/src/relaxations/: relaxed_action.cpp  relaxed_planning_graph.cpp  relaxed_state.cpp
tests/src/search/: best_first_search.cpp
tests/src/theories/: theories.cpp
tests/test_files/: test_domain_no_actions.txt  test_domain_with_actions.txt
(+76143 files in other folders)
